# C.progs.Sem2

./: Lists  Lists.c  Text files
GitL3/: .gitignore  docu.docx  sort.c  ~$docu.docx
GitL3/stage/: sort.c
Libs/: CMakeLists.txt  lib.c  lib.h  main.c  prog  prog1
RGRProg/: CMakeLists.txt  README.md  deck_operations.c  game_logic.c  main.c  poker.c  poker.h  test_poker.c  testing.c  user_management.c  users.txt
RGRProg/history_of_games/: KBACokk_history.txt  Pl1_history.txt  Player0_history.txt  Player1_history.txt  history.txt
Test_lb/: CMakeLists.txt  README.md  sort.c  sort.h  test_sorts.c
pthread/: counting.c  graph.py  laba7.md  pthread.c  pthread.docx
